--- a/src/main/resources/ValidationMessages.properties
+++ b/src/main/resources/ValidationMessages.properties
@@ -4,7 +4,7 @@ register.username.invalid=Invalid username
 register.password.invalid=Invalid password
 register.password.size=Invalid password size
 register.password.null=Password cannot be null
-login.username.invalid=Invalid username
+login.email.invalid=Invalid email
 login.password.invalid=Invalid password
 login.password.size=Invalid password size
 login.password.null=Password cannot be null
