--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.show-sql=true
 spring.datasource.url=jdbc:mysql://eu-cdbr-west-01.cleardb.com:3306/heroku_4f0a18aae649f4d
 spring.datasource.username=b05a35f3a04857
 spring.datasource.password=109fac27
