--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,4 +4,4 @@ spring.datasource.url=jdbc:mysql://eu-cdbr-west-01.cleardb.com:3306/heroku_4f0a1
 spring.datasource.username=b05a35f3a04857
 spring.datasource.password=109fac27
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.tomcat.max-wait=20000
+#spring.datasource.tomcat.max-wait=20000
