--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
-spring.datasource.url=jdbc:mysql://localhost:3306/heroku_4f0a18aae649f4d
+spring.datasource.url=jdbc:mysql://localhost:3306/rgcs_motors
 spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
