--- a/src/main/resources/ValidationMessages.properties
+++ b/src/main/resources/ValidationMessages.properties
@@ -1,12 +1,22 @@
 register.firstname.invalid=Invalid firstname
+register.firstname.null=Firstname can't be null
 register.lastname.invalid=Invalid lastname
-register.username.invalid=Invalid username
+register.lastname.null=Lastname can't be null
+
 register.password.invalid=Invalid password
 register.password.size=Invalid password size
-register.password.null=Password cannot be null
+register.password.null=Password can't be null
+
+register.vat.invalid=Invalid vat number
+register.vat.null=Vat number can't be null
+
+register.address.null=Address can't be null
+
+register.mail.null=Email can't be null
+
+register.type.null=Type must be set
+
 login.email.invalid=Invalid email
 login.password.invalid=Invalid password
 login.password.size=Invalid password size
 login.password.null=Password cannot be null
-register.email.invalid=Invalid email
-registerForm.name.empty=Name cannot be empty
