--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
-spring.datasource.url=jdbc:mysql://eu-cdbr-west-01.cleardb.com:3306/heroku_4f0a18aae649f4d
-spring.datasource.username=b05a35f3a04857
-spring.datasource.password=109fac27
+spring.datasource.url=jdbc:mysql://serverexpose.com:3306/thesis
+spring.datasource.username=thesis
+spring.datasource.password=T1r0k06l6orO!
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 #spring.datasource.tomcat.max-wait=20000
