search page added - user selected, search iput validatio - validatio for ower type completed

--- a/src/main/resources/ValidationMessages.properties
+++ b/src/main/resources/ValidationMessages.properties
@@ -16,7 +16,13 @@ register.mail.null=Email can't be null
 
 register.type.null=Type must be set
 
+
+
 login.email.invalid=Invalid email
 login.password.invalid=Invalid password
 login.password.size=Invalid password size
 login.password.null=Password cannot be null
+
+
+searchForm.validation.nullSearchType = You must choose a search target first
+searchForm.validation.nullSearchValue = You must give at least oe parameter for the search to begin
