Create Repair (Front end - Back end)

--- a/src/main/resources/ValidationMessages.properties
+++ b/src/main/resources/ValidationMessages.properties
@@ -16,7 +16,20 @@ register.mail.null=Email can't be null
 
 register.type.null=Type must be set
 
+register.licenseplates.null = License Plate can't be null
+register.licenseplates.invalid = License Plates are invalid (e.g abc-1234)
+register.brand.null = Brand can't be null
+register.model.null = Model can't be null
+register.factorydate.null = Factory Date Can't be null
+register.factorydate.invalid = Factory Date is Invalid  (e.g 1990)
+register.colour.null = Colour can't be null
 
+register.status.null = Status can't be null
+register.repairtype.null = Repair Type can't be null
+register.repairdate.null = Repair Date can't be null
+register.repairCost.null = Repair Cost can't be null
+register.repairCost.invalid = Repair Cost is invalid
+register.repairDescription.null = Repair description can't be null
 
 login.email.invalid=Invalid email
 login.password.invalid=Invalid password
@@ -26,3 +39,5 @@ login.password.null=Password cannot be null
 
 searchForm.validation.nullSearchType = You must choose a search target first
 searchForm.validation.nullSearchValue = You must give at least oe parameter for the search to begin
+
+
