Search By dates

--- a/src/main/resources/ValidationMessages.properties
+++ b/src/main/resources/ValidationMessages.properties
@@ -40,4 +40,6 @@ login.password.null=Password cannot be null
 searchForm.validation.nullSearchType = You must choose a search target first
 searchForm.validation.nullSearchValue = You must give at least oe parameter for the search to begin
 
+searchFormDate.validation.nullSearchDate = You must at least Select the First date
+
 
